# TODO-phase2

./: .gitignore  CLAUDE.md  README.md  SPEC-KIT-PLUS.md  pyproject.toml
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 85ae9b35494c_add_password_hash_to_users.py  a8b1f6de382c_create_users_and_tasks_tables.py
backend/src/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
backend/src/auth/: dependencies.py  jwt.py  password.py
frontend/: README.md  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Alert.tsx  Button.tsx  Card.tsx  Input.tsx  TaskForm.tsx  TaskItem.tsx
frontend/lib/: api.ts  auth.ts  types.ts  useAuth.ts
specs/: README.md
specs/001-backend-api-foundation/: data-model.md  plan.md  spec.md  tasks.md
specs/002-authentication-system/: data-model.md  quickstart.md  research.md  spec.md
specs/003-protected-task-api/: data-model.md  quickstart.md  spec.md
specs/004-frontend-web-app/: data-model.md  plan.md  spec.md
specs/1-add-task/: data-model.md  plan.md  quickstart.md  research.md
specs/2-view-tasks/: plan.md  spec.md  tasks.md
specs/3-update-task/: quickstart.md  research.md  spec.md
specs/4-mark-complete/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/5-delete-task/: data-model.md  plan.md  quickstart.md  spec.md
src/todo/: __init__.py  cli.py  main.py  manager.py  task.py
tests/: test_cli.py  test_manager.py  test_task.py
(+87 files in other folders)
